--- a/Views/Authorization/AuditForm.cshtml
+++ b/Views/Authorization/AuditForm.cshtml
@@ -29,23 +29,17 @@
             <div class="form-group">
                 <label asp-for="@Model.Auditdetails.Date" class="control-label"></label>
                 <input asp-for="@Model.Auditdetails.Date" class="form-control" />
-                <span asp-validation-for="@Model.Auditdetails.Type" class="text-danger"></span>
-            </div>
-
-            @*<div class="form-group">
-            <label asp-for="@Model.Auditdetails.Type" class="control-label"></label>
-            <input  asp-for="@Model.Auditdetails.Type" class="form-control" />
-            <span asp-validation-for="@Model.Auditdetails.Type" class="text-danger"></span>
-        </div>*@
+                <span asp-validation-for="@Model.Auditdetails.Date" class="text-danger"></span>
+            </div>            
 
         <div class="form-group">
             <h5><label asp-for="@Model.Auditdetails.Type" class="control-label"></label></h5>
-            <span asp-validation-for="@Model.Auditdetails.Type" class="text-danger"></span>            
+                        
             @Html.RadioButtonFor(model => model.Auditdetails.Type, "Internal")
             Internal
             <br>
             @Html.RadioButtonFor(model => model.Auditdetails.Type, "SOX")
-            SOX
+            SOX<br>
             <span asp-validation-for="@Model.Auditdetails.Type" class="text-danger"></span>
         </div>
 
