--- a/Views/Authorization/Home.cshtml
+++ b/Views/Authorization/Home.cshtml
@@ -37,7 +37,7 @@
     <div class="col-md-4">
         <form asp-action="AuditForm">            
             <div class="form-group">
-                <input type="submit" value="Audit" class="btn btn-primary" />
+                <input type="submit" value="Audit" class="btn btn-success btn-lg" />
             </div>
         </form>
     </div>
