--- a/Views/Authorization/Home.cshtml
+++ b/Views/Authorization/Home.cshtml
@@ -35,9 +35,17 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AuditForm">            
+        <form asp-action="AuditForm">
             <div class="form-group">
                 <input type="submit" value="Audit" class="btn btn-success btn-lg" />
+            </div>
+        </form>
+    </div>
+
+    <div class="col-md-4">
+        <form asp-action="History">
+            <div class="form-group">
+                <input type="submit" value="Audit History" class="btn btn-success btn-lg" />
             </div>
         </form>
     </div>
