--- a/Views/Authorization/Checklist.cshtml
+++ b/Views/Authorization/Checklist.cshtml
@@ -20,16 +20,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.QuestionNo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Question)
-            </td>
-            
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QuestionNo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Question)
+                </td>
+
+            </tr>
+        }
     </tbody>
 </table>
+
+<div>
+    <a asp-action="Home">Back to List</a>
+</div>
