--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
-    <header>
+<body style="background-color:darkslategrey">
+    <header >
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Authorization" asp-action="Home">AuditManagementPortalMVC</a>
@@ -25,7 +25,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container" style="background-color:honeydew">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
