--- a/Views/Authorization/Login.cshtml
+++ b/Views/Authorization/Login.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<h1 style="margin-left:45%">Login</h1>
 
 <hr />
-<div class="row">
-    <div class="col-md-4" >
-        <form asp-action="Login">
+<div class="row" >
+    <div class="col-md-4" style="width:55%;margin:0 auto; margin-top:0px;border:1px solid" >
+        <form asp-action="Login" style="padding-top:10px" >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @if(!string.IsNullOrEmpty(ViewBag.Message))
             {
