--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,25 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AuditManagementPortalMVC</title>
+    <title>@ViewData["Title"] - Audit Management Portal</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body style="background-color:darkslategrey">
     <header >
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3" style="background-color:honeydew">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Authorization" asp-action="Home">AuditManagementPortalMVC</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Authorization" asp-action="Home">Audit Management Portal</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
-                <ul>
-                    <li class="nav-item">
+                
+                    <div class="nav-item">
                         <a class="btn btn-primary" asp-area="" asp-controller="Authorization" asp-action="SignOut">Sign Out</a>
-                    </li>
-                </ul>
+                    </div>
+                
             </div>
         </nav>
     </header>
@@ -31,9 +31,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color:honeydew">
         <div class="container">
-            &copy; 2020 - AuditManagementPortalMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - AuditManagementPortal
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
