--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,37 +1,55 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Audit Management Portal</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        body {
+            background-color: darkslategrey;
+        }
+        header, footer,#bgcol {
+            background-color:honeydew;
+        }
+        #bgcol {
+            box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
+        }
+        #Title {
+            font-family: "Trebuchet MS", Helvetica, sans-serif;
+            font-size: 25px;
+        }
+
+    </style>
 </head>
-<body style="background-color:darkslategrey">
+<body >
     <header >
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3" style="background-color:honeydew">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3" >
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Authorization" asp-action="Home">Audit Management Portal</a>
+                <a id="Title" class="navbar-brand" asp-area="" asp-controller="Portal" asp-action="Home">Audit Management Portal</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
                 
-                    <div class="nav-item">
-                        <a class="btn btn-primary" asp-area="" asp-controller="Authorization" asp-action="SignOut">Sign Out</a>
+                    <div class="nav-item align-middle">
+                        <a class="btn btn-primary" asp-area="" asp-controller="Portal" asp-action="SignOut">Sign Out</a>
                     </div>
                 
             </div>
         </nav>
     </header>
-    <div class="container" style="background-color:honeydew">
+    <div class="container" id="bgcol">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color:honeydew">
+    <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - AuditManagementPortal
         </div>
